# mopidy-soundcloud

./: .coveragerc  .gitignore  .mailmap  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml
mopidy_soundcloud/: __init__.py  actor.py  ext.conf  images.py  library.py  playlists.py  soundcloud.py
src/mopidy_soundcloud/: soundcloud.py
tests/: __main__.py  test_api.py  test_cache.py  test_extension.py  test_library.py
tests/fixtures/: sc-explore.yaml  sc-following.yaml  sc-groups.yaml  sc-images-playlist.yaml  sc-images-track.yaml  sc-liked.yaml  sc-login-error.yaml  sc-login.yaml  sc-popular.yaml  sc-resolve-app-client-id.yaml  sc-resolve-http.yaml  sc-resolve-public-client-id.yaml  sc-resolve-set.yaml  sc-resolve-track-id-invalid-client-id.yaml  sc-resolve-track-id.yaml  sc-resolve-track-none.yaml  sc-resolve-track.yaml  sc-search.yaml  sc-set-invalid.yaml  sc-set.yaml  sc-sets.yaml  sc-stream.yaml  sc-tracks.yaml  sc-user-tracks.yaml
