[metadata]
name = Mopidy-SoundCloud
version = 3.1.0
url = https://github.com/mopidy/mopidy-soundcloud
author = Janez Troha
author_email = dz0ny@ubuntu.si
license = MIT
license_file = LICENSE
description = Mopidy extension for playing music from SoundCloud
long_description = file: README.rst
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio :: Players


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
    Mopidy >= 3.0.0
    Pykka >= 2.0.1
    setuptools
    requests >= 2.0.0
    beautifulsoup4 >= 4.7.1


[options.extras_require]
lint =
    black
    check-manifest
    flake8
    flake8-black
    flake8-bugbear
    flake8-import-order
    isort[pyproject]
test =
    pytest
    pytest-cov
    vcrpy
dev =
    %(lint)s
    %(test)s


[options.packages.find]
exclude =
    tests
    tests.*


[options.entry_points]
mopidy.ext =
    soundcloud = mopidy_soundcloud:Extension


[flake8]
application-import-names = mopidy_soundcloud, tests
max-line-length = 80
exclude = .git, .tox, build
select =
    # Regular flake8 rules
    C, E, F, W
    # flake8-bugbear rules
    B
    # B950: line too long (soft speed limit)
    B950
    # pep8-naming rules
    N
ignore =
    # E203: whitespace before ':' (not PEP8 compliant)
    E203
    # E501: line too long (replaced by B950)
    E501
    # W503: line break before binary operator (not PEP8 compliant)
    W503
